fixed overflow on body issue, z-index

--- a/src/common/main.scss
+++ b/src/common/main.scss
@@ -1,131 +1,133 @@
-@import './colors.scss';
-@import './fonts.scss';
+@import "./colors.scss";
+@import "./fonts.scss";
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
+.roll {
+  overflow: hidden;
+}
 body {
-    background-color: $BACKGROUND;
+  background-color: $BACKGROUND;
 }
 
 // Content
 
 .row {
-    margin: 0 10% 0 10%;
-    display: flex;
-    color: $SECONDARY_COLOR;
-    text-align: justify;
+  margin: 0 10% 0 10%;
+  display: flex;
+  color: $SECONDARY_COLOR;
+  text-align: justify;
 }
 
 .column {
-    padding: 1%;
-    flex: 50%;
-    justify-content: center;
-    align-items: center;
+  padding: 1%;
+  flex: 50%;
+  justify-content: center;
+  align-items: center;
 }
 
 .content-headline {
-    font-size: 80px;
-    font-weight: 400;
+  font-size: 80px;
+  font-weight: 400;
 }
 
 .content-wrapper {
-    position: relative;
-    padding-bottom: 56.25%;
+  position: relative;
+  padding-bottom: 56.25%;
 }
 
 .tedx-iframe {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 //About Details
 
 .details-section {
-    margin: 100px 0;
-    border-bottom: 5px solid $SECONDARY_COLOR;
-    border-top: 5px solid $SECONDARY_COLOR;
-    padding: 75px 0;
-    color: $BACKGROUND;
-    background-color: $PRIMARY_COLOR;
+  margin: 100px 0;
+  border-bottom: 5px solid $SECONDARY_COLOR;
+  border-top: 5px solid $SECONDARY_COLOR;
+  padding: 75px 0;
+  color: $BACKGROUND;
+  background-color: $PRIMARY_COLOR;
 }
 
 .details-headline {
-    margin: 20px 0;
-    width: 10%;
+  margin: 20px 0;
+  width: 10%;
 }
 
 .details-content {
-    margin-bottom: 20px;
-    text-align: justify;
+  margin-bottom: 20px;
+  text-align: justify;
 }
 
 //About Center Design
 
 .center-design-wrapper {
-    position: relative;
+  position: relative;
 }
 
 .center-design {
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    display: block;
-    position: absolute;
-    top: 5px;
-    margin: 0 auto;
-    width: 200px;
-    height: 200px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  display: block;
+  position: absolute;
+  top: 5px;
+  margin: 0 auto;
+  width: 200px;
+  height: 200px;
 }
 
 // contents from app.scss
 .App {
-    text-align: center;
+  text-align: center;
 }
 
 .App-logo {
-    height: 40vmin;
-    pointer-events: none;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 .App-header {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 //Global Styles
 
 .flex-container {
-    margin: 0 10% 0 10%;
-    display: flex;
+  margin: 0 10% 0 10%;
+  display: flex;
 }
 
 .flex-row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .flex-column {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 // temp footer styling
 .footerClass {
-    color: white;
+  color: white;
 }
 .page-wrapper {
-    padding-top: 90px;
-    min-height: 100vh;
+  padding-top: 90px;
+  min-height: 100vh;
 }
